--- a/Functions/Preparation_Data/Preprocessing.ipynb
+++ b/Functions/Preparation_Data/Preprocessing.ipynb
@@ -48,6 +48,35 @@
    "outputs": [],
    "source": [
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
+    "def Correlation(dataframe, column_target, number):\n",
+    "    '''\n",
+    "    This function RETURN a correlation between TARGET Column\n",
+    "    ------------------------------\n",
+    "    Parameter(dataframe): DataFrame\n",
+    "    Parameter(column_target): Dataframe with TARGET COLUMN (String type)\n",
+    "    Parameter(number): 0.0 - 1.0 Int number\n",
+    "    ------------------------------\n",
+    "    '''\n",
+    "    \n",
+    "    print('--- Start Correlation()\\n.\\n.')\n",
+    "    \n",
+    "    new_dataframe = dataframe.copy()\n",
+    "    correlation = []\n",
+    "    \n",
+    "    if number >=0.0 or number <=1.0:\n",
+    "        for _ in range(len(new_dataframe.corr()[column_target])):\n",
+    "            if (new_dataframe.corr()[column_target][new_dataframe.corr()[column_target].index[_]] <= -number) or (new_dataframe.corr()[column_target][new_dataframe.corr()[column_target].index[_]] >= number):\n",
+    "                print(_, ' : ', new_dataframe.corr()[column_target].index[_], ' --- ', new_dataframe.corr()[column_target][new_dataframe.corr()[column_target].index[_]])\n",
+    "                correlation.append([new_dataframe.corr()[column_target].index[_]])\n",
+    "                \n",
+    "    print('Correlation between: ', '(', -number, ' - ', number, ')\\nLength of Dataframe is: ', len(correlation))\n",
+    "    print('--- End Correlation()')\n",
+    "    return correlation\n",
+    "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
+    "\n",
+    "\n",
+    "\n",
+    "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
     "def Select_Target(dataframe, column_name):\n",
     "    '''\n",
     "    This function RETURN a dataframe with Target\n",
@@ -58,7 +87,7 @@
     "    '''\n",
     "    try:\n",
     "        print('--- Start Select_Target()\\n.\\nTarget: ',column_name, '\\n.')\n",
-    "    \n",
+    "        \n",
     "        new_dataframe = dataframe.copy()\n",
     "        new_dataframe['Date'] = new_dataframe.index\n",
     "        new_dataframe['Date'] = new_dataframe['Date'].shift(-1)\n",
@@ -82,24 +111,26 @@
     "    Parameter(dataframe): DataFrame\n",
     "    ------------------------------\n",
     "    '''\n",
+    "        \n",
+    "    new_dataframe = dataframe.copy()\n",
     "    \n",
-    "    null_value = dataframe.isnull().sum()\n",
-    "    percent = int((40/100) * len(dataframe))\n",
+    "    null_value = new_dataframe.isnull().sum()\n",
+    "    percent = int((40/100) * len(new_dataframe))\n",
     "\n",
     "    print('--- Start Drop_Big_NullSum_Columns()\\n.\\n Drop 40% null columns \\n.')\n",
-    "\n",
-    "    for _ in dataframe.columns:\n",
+    "    \n",
+    "    for _ in new_dataframe.columns:\n",
     "        try:\n",
     "            #print(_, ' : ', dataframe[_].isnull().sum(), ' --- ', percent, '%')\n",
     "            \n",
     "            if null_value[_] > percent:\n",
-    "                dataframe.drop(columns=_, axis=1, inplace=True)\n",
+    "                new_dataframe.drop(columns=_, axis=1, inplace=True)\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
     "\n",
     "    print('--- End  Drop_Big_NullSum_Columns()\\n')\n",
     "\n",
-    "    return dataframe\n",
+    "    return new_dataframe\n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
     "\n",
     "\n",
@@ -115,26 +146,28 @@
     "    '''\n",
     "    \n",
     "    print('--- Start Drop_Holidays_Values()\\n.\\n.')\n",
-    "    \n",
+    "\n",
+    "    new_dataframe = dataframe.copy()\n",
+    "\n",
     "    try:\n",
-    "        dataframe['Days_Of_Weeks'] = dataframe.index\n",
-    "        sr = dataframe['Days_Of_Weeks']\n",
+    "        new_dataframe['Days_Of_Weeks'] = new_dataframe.index\n",
+    "        sr = new_dataframe['Days_Of_Weeks']\n",
     "        sr = pd.to_datetime(sr) \n",
     "        result = sr.dt.day_name(locale = 'English') \n",
-    "        dataframe['Days_Of_Weeks'] = result\n",
+    "        new_dataframe['Days_Of_Weeks'] = result\n",
     "\n",
     "        drop_holidays_index = []\n",
     "\n",
-    "        for _ in range(len(dataframe)):\n",
+    "        for _ in range(len(new_dataframe)):\n",
     "            #print(_, ' --- ', dataframe.index[_], ' : ', dataframe.iloc[_,-1])\n",
-    "            if dataframe.iloc[_,-1] == 'Saturday' or dataframe.iloc[_,-1] == 'Sunday':\n",
+    "            if new_dataframe.iloc[_,-1] == 'Saturday' or new_dataframe.iloc[_,-1] == 'Sunday':\n",
     "                #print(_, ' --- ', dataframe.index[_], ' : ', dataframe.iloc[_,-1])\n",
-    "                drop_holidays_index += [dataframe.index[_]]\n",
+    "                drop_holidays_index += [new_dataframe.index[_]]\n",
     "\n",
-    "        dataframe.drop(index=drop_holidays_index, axis=0, inplace=True)\n",
-    "        dataframe.drop(columns=['Days_Of_Weeks'], axis=1, inplace=True)\n",
+    "        new_dataframe.drop(index=drop_holidays_index, axis=0, inplace=True)\n",
+    "        new_dataframe.drop(columns=['Days_Of_Weeks'], axis=1, inplace=True)\n",
     "        print('--- End Drop_Holidays_Values()')\n",
-    "        return dataframe\n",
+    "        return new_dataframe\n",
     "\n",
     "    except:\n",
     "        print('No option!\\nError')\n",
@@ -152,14 +185,15 @@
     "    '''\n",
     "    \n",
     "    print('--- Start Drop_Missing_Data()\\n.\\n.')\n",
+    "    new_dataframe = dataframe.copy()\n",
     "\n",
-    "    for _ in dataframe.columns:\n",
-    "        if dataframe.isnull().sum()[_] > 7:\n",
+    "    for _ in new_dataframe.columns:\n",
+    "        if new_dataframe.isnull().sum()[_] > 7:\n",
     "            #print(_, ': ', dataframe[dataframe.index < '2021-01-01'].isnull().sum()[_])\n",
-    "            dataframe.drop(columns=_, axis=1, inplace=True)\n",
+    "            new_dataframe.drop(columns=_, axis=1, inplace=True)\n",
     "    \n",
     "    print('--- End  Drop_Missing_Data()\\n')\n",
-    "    return dataframe\n",
+    "    return new_dataframe\n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
     "\n",
     "\n",
@@ -173,13 +207,14 @@
     "    '''\n",
     "    \n",
     "    print('--- Start Forward_Fill_Data()\\n.\\n.')\n",
-    "\n",
-    "    for _ in dataframe.columns:\n",
-    "        if dataframe.isnull().sum()[_] > 0:\n",
-    "            dataframe.ffill(axis ='rows', inplace=True)\n",
+    "    new_dataframe = dataframe.copy()\n",
+    "    \n",
+    "    for _ in new_dataframe.columns:\n",
+    "        if new_dataframe.isnull().sum()[_] > 0:\n",
+    "            new_dataframe.ffill(axis ='rows', inplace=True)\n",
     "    print('--- End Forward_Fill_Data()\\n')\n",
     "\n",
-    "    return dataframe\n",
+    "    return new_dataframe\n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
     "\n",
     "\n",
@@ -193,19 +228,41 @@
     "    '''\n",
     "    \n",
     "    print('--- Start Backrward_Fill_Data()\\n.\\n.')\n",
-    "\n",
-    "    for _ in dataframe.columns:\n",
-    "        if dataframe.isnull().sum()[_] > 0:\n",
-    "            dataframe.bfill(axis ='rows', inplace=True)\n",
+    "    new_dataframe = dataframe.copy()\n",
+    "    \n",
+    "    for _ in new_dataframe.columns:\n",
+    "        if new_dataframe.isnull().sum()[_] > 0:\n",
+    "            new_dataframe.bfill(axis ='rows', inplace=True)\n",
     "    print('--- End Backrward_Fill_Data()\\n')\n",
     "\n",
-    "    return dataframe\n",
+    "    return new_dataframe\n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
     "\n",
     "\n",
     "\n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
-    "\n",
+    "def Keep_Specific_Columns(dataframe):\n",
+    "    '''\n",
+    "    This Function Return a dataframe and keep specific columns if exist\n",
+    "    (BTCBUSD - BTCBUSD - XRPBUSD - ETHBUSD - LTCBUSD - LINKBUSD - ADABUSD - SOLBUSD - DOGEBUSD - DOTBUSD - AVAXBUSD)\n",
+    "    (Open - High - Low - Close)\n",
+    "    ------------------------------\n",
+    "    Parameter(dataframe): DataFrame\n",
+    "    ------------------------------\n",
+    "    '''\n",
+    "    \n",
+    "    print('--- Start Keep_Specific_Columns()\\n.\\n.')\n",
+    "    new_dataframe = dataframe.copy()\n",
+    "        \n",
+    "    for _ in new_dataframe.columns:\n",
+    "        if (_ == 'BTCBUSD_Open') or (_ == 'BTCBUSD_Close') or (_ == 'BTCBUSD_Low') or (_ == 'BTCBUSD_High') or (_ == 'ETHBUSD_Open') or (_ == 'ETHBUSD_Close') or (_ == 'ETHBUSD_Low') or (_ == 'ETHBUSD_High') or (_ == 'XRPBUSD_Open') or (_ == 'XRPBUSD_Close') or (_ == 'XRPBUSD_Low') or (_ == 'XRPBUSD_High') or (_ == 'LTCBUSD_Open') or (_ == 'LTCBUSD_Close') or (_ == 'LTCBUSD_Low') or (_ == 'LTCBUSD_High') or (_ == 'ADABUSD_Open') or (_ == 'ADABUSD_Close') or (_ == 'ADABUSD_Low') or (_ == 'ADABUSD_High') or (_ == 'DOGEBUSD_Open') or (_ == 'DOGEBUSD_Close') or (_ == 'DOGEBUSD_Low') or (_ == 'DOGEBUSD_High') or (_ == 'SOLBUSD_Open') or (_ == 'SOLBUSD_Close') or (_ == 'SOLBUSD_Low') or (_ == 'SOLBUSD_High') or (_ == 'DOTBUSD_Open') or (_ == 'DOTBUSD_Close') or (_ == 'DOTBUSD_Low') or (_ == 'DOTBUSD_High') or (_ == 'LINKBUSD_Open') or (_ == 'LINKBUSD_Close') or (_ == 'LINKBUSD_Low') or (_ == 'LINKBUSD_High') or (_ == 'BNBBUSD_Open') or (_ == 'BNBBUSD_Close') or (_ == 'BNBBUSD_Low') or (_ == 'BNBBUSD_High') or (_ == 'AVAXBUSD_Open') or (_ == 'AVAXBUSD_Close') or (_ == 'AVAXBUSD_Low') or (_ == 'AVAXBUSD_High') or (_ == 'BNBBUSD_Open') or (_ == 'BNBBUSD_Close') or (_ == 'BNBBUSD_Low') or (_ == 'BNBBUSD_High'):\n",
+    "            print(_)\n",
+    "        elif new_dataframe[_].isnull().sum() > 7:\n",
+    "            del new_dataframe[_]\n",
+    "        else:\n",
+    "            continue;\n",
+    "    print('--- End Keep_Specific_Columns()')\n",
+    "    return new_dataframe\n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n"
    ]
   },
