--- a/Functions/Preparation_Data/Preprocessing.ipynb
+++ b/Functions/Preparation_Data/Preprocessing.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7e7e2c3c",
    "metadata": {},
    "outputs": [],
@@ -50,28 +50,33 @@
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
     "def Correlation(dataframe, column_target, number):\n",
     "    '''\n",
-    "    This function RETURN a correlation between TARGET Column\n",
+    "    This function RETURN a correlation dataframe between TARGET Column\n",
     "    ------------------------------\n",
     "    Parameter(dataframe): DataFrame\n",
     "    Parameter(column_target): Dataframe with TARGET COLUMN (String type)\n",
-    "    Parameter(number): 0.0 - 1.0 Int number\n",
+    "    Parameter(number): -0.1 and 1.0 Float Number\n",
     "    ------------------------------\n",
     "    '''\n",
     "    \n",
-    "    print('--- Start Correlation()\\n.\\n.')\n",
-    "    \n",
-    "    new_dataframe = dataframe.copy()\n",
     "    correlation = []\n",
+    "    Target_Correlation = pd.DataFrame(data=dataframe.corr()[column_target]).copy()\n",
+    "\n",
+    "    try:\n",
+    "        print('--- Start Correlation()\\n.\\n.')\n",
+    "        \n",
+    "        for _ in range(len(Target_Correlation)):\n",
+    "            #print(_, ': ', Target_Correlation.index[_], ' --- ', Target_Correlation.iloc[_,0])\n",
+    "            if (Target_Correlation.iloc[_,0] <= -number) or (Target_Correlation.iloc[_,0] >= number):\n",
+    "                #print(_, ': ', Target_Correlation.index[_], ' --- ', Target_Correlation.iloc[_,0])\n",
+    "                correlation.append(Target_Correlation.index[_])\n",
+    "        \n",
+    "        print('Correlation between: ', '(', -number, ' - ', number, ')\\nLength of Dataframe is: ', len(correlation))\n",
+    "        print('--- End Correlation()')\n",
+    "        #return correlation\n",
+    "        return dataframe[correlation]\n",
     "    \n",
-    "    if number >=0.0 or number <=1.0:\n",
-    "        for _ in range(len(new_dataframe.corr()[column_target])):\n",
-    "            if (new_dataframe.corr()[column_target][new_dataframe.corr()[column_target].index[_]] <= -number) or (new_dataframe.corr()[column_target][new_dataframe.corr()[column_target].index[_]] >= number):\n",
-    "                print(_, ' : ', new_dataframe.corr()[column_target].index[_], ' --- ', new_dataframe.corr()[column_target][new_dataframe.corr()[column_target].index[_]])\n",
-    "                correlation.append([new_dataframe.corr()[column_target].index[_]])\n",
-    "                \n",
-    "    print('Correlation between: ', '(', -number, ' - ', number, ')\\nLength of Dataframe is: ', len(correlation))\n",
-    "    print('--- End Correlation()')\n",
-    "    return correlation\n",
+    "    except:\n",
+    "        print('No option!\\nError')\n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
     "\n",
     "\n",
@@ -115,9 +120,9 @@
     "    new_dataframe = dataframe.copy()\n",
     "    \n",
     "    null_value = new_dataframe.isnull().sum()\n",
-    "    percent = int((40/100) * len(new_dataframe))\n",
+    "    percent = int((12/100) * len(new_dataframe))\n",
     "\n",
-    "    print('--- Start Drop_Big_NullSum_Columns()\\n.\\n Drop 40% null columns \\n.')\n",
+    "    print('--- Start Drop_Big_NullSum_Columns()\\n.\\n Drop > 12% null columns from length of dataframe\\n.')\n",
     "    \n",
     "    for _ in new_dataframe.columns:\n",
     "        try:\n",
