--- a/Functions/Visualization/Plots.ipynb
+++ b/Functions/Visualization/Plots.ipynb
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "b58271d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "\n",
+    "import numpy as np\n",
     "import math\n",
     "\n",
     "import mplcyberpunk as mplcp\n",
@@ -40,11 +40,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "41947e15",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
+    "def Plot_Of_Correlation(dataframe):\n",
+    "    '''\n",
+    "    This function visualize plot of Target Correlation  (Target is the first column)\n",
+    "    ------------------------------\n",
+    "    Parameter(dataframe): DataFrame\n",
+    "    ------------------------------\n",
+    "    '''\n",
+    "    \n",
+    "    plt.style.use(\"cyberpunk\") #Background color\n",
+    "\n",
+    "    plt.figure(figsize=(12, 7), tight_layout=True)\n",
+    "\n",
+    "    heatmap = sns.heatmap(dataframe.corr()[[dataframe.corr().columns[0]]].sort_values(by=dataframe.corr().columns[0], ascending=False),\n",
+    "                          vmin=-1, vmax=1, annot=True, fmt='.1g', square=False, cbar=False, cmap='coolwarm')\n",
+    "    heatmap.set_title('Correlation of Target', fontdict={'fontsize':15}, color='Gold', pad=12);\n",
+    "\n",
+    "    plt.tick_params(axis='x', labelsize=12, colors='White')\n",
+    "    plt.tick_params(axis='y', labelrotation=7, labelsize=12, colors='White')\n",
+    "\n",
+    "    plt.show()\n",
+    "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
+    "\n",
+    "\n",
+    "\n",
+    "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
+    "def Plot_Of_Matrix_Correlation(dataframe):\n",
+    "    '''\n",
+    "    This function visualize plot of Target Correlation  (Target is the first column)\n",
+    "    ------------------------------\n",
+    "    Parameter(dataframe): DataFrame\n",
+    "    ------------------------------\n",
+    "    '''\n",
+    "        \n",
+    "    matrix = np.tril(dataframe.corr())\n",
+    "\n",
+    "    plt.figure(figsize=(16, 8), tight_layout=True)\n",
+    "\n",
+    "    heatmap = sns.heatmap(dataframe.corr(),\n",
+    "                          vmin=-1, vmax=1, annot=True,  fmt='.1g', square=False, cbar=False,\n",
+    "                          mask=matrix,\n",
+    "                          cmap='coolwarm')\n",
+    "    heatmap.set_title('Correlation of Target', fontdict={'fontsize':15}, color='Gold', pad=12)  \n",
+    "\n",
+    "    plt.tick_params(axis='x', labelsize=0)\n",
+    "    plt.tick_params(axis='y', labelrotation=7, labelsize=12, width=3, length=7,  direction='in', colors='White')\n",
+    "    plt.grid(zorder=3, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "\n",
+    "    plt.show()\n",
+    "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
+    "\n",
+    "\n",
+    "\n",
     "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
     "def Plot_Of_Line(dataframe, column_name):\n",
     "    '''\n",
@@ -708,7 +761,239 @@
     "\n",
     "\n",
     "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
+    "def Recursive_Forecast_Train_Test_Plot_Split(dataframe, model):\n",
+    "    '''\n",
+    "    This function visualize 3 plots with Recursive Forecast method\n",
+    "    1) Actual and Forecast Price\n",
+    "    2) The Metric of Forecast (RMSE)\n",
+    "    3) The Residuals of Forecast\n",
+    "    ------------------------------\n",
+    "    Parameter(dataframe): DataFrame\n",
+    "    Parameter(model): A Model (With parameters or not)\n",
+    "    ------------------------------\n",
+    "    '''\n",
+    "    \n",
+    "    try:\n",
+    "        prediction = [] #Create a list value\n",
+    "    \n",
+    "        X = dataframe.iloc[:, 1:]\n",
+    "        y = dataframe.iloc[:, 0]\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False) #80% X_train - 20% X_test\n",
+    "    \n",
+    "        Xtrain = X_train.copy()\n",
+    "        Xtest = X_test.copy()\n",
+    "        ytrain = y_train.copy()\n",
+    "        ytest = y_test.copy()\n",
     "\n",
+    "        model.fit(Xtrain, ytrain) #Fit the model\n",
+    "        model_train_predict = model.predict(Xtrain)\n",
+    "        \n",
+    "        #------------ Plot 1,4 ------------#\n",
+    "        index = y_train.index.copy()\n",
+    "        index = pd.to_datetime(index) #y_test index\n",
+    "        \n",
+    "        forecast_index = y_test.index.copy()\n",
+    "        forecast_index = pd.to_datetime(forecast_index) #y_test index\n",
+    "        #------------ Plot 1,4 ------------#\n",
+    "\n",
+    "        #------------ Drop the Xtest rows and Fit again the Xtrain ------------#\n",
+    "        while len(Xtest) > 0:    \n",
+    "            if len(Xtest) >= 30:\n",
+    "            \n",
+    "                model.fit(Xtrain, ytrain) #Fit the model\n",
+    "                forecast = model.predict(Xtest.iloc[0:30]).tolist() #Predict the days\n",
+    "                prediction = prediction + forecast #Insert the forecast values in prediction\n",
+    "        \n",
+    "                Xtrain = pd.concat([Xtrain, Xtest.iloc[0:30]]) #Insert values from second dataframe to first\n",
+    "                ytrain = pd.concat([ytrain, ytest.iloc[0:30]]) #Insert values from second dataframe to first\n",
+    "        \n",
+    "                Xtest.drop(Xtest.index[range(30)], inplace=True) #Drop Rows\n",
+    "                ytest.drop(ytest.index[range(30)], inplace=True) #Drop Rows\n",
+    "\n",
+    "            else:\n",
+    "                forecast = model.predict(Xtest).tolist() #Predict the days\n",
+    "                prediction = prediction + forecast #Insert the forecast values in prediction\n",
+    "                break;\n",
+    "    #------------ Drop the Xtest rows and Fit again the Xtrain ------------#\n",
+    "    \n",
+    "    #print('X_train: ', X_train.shape, '\\nXtrain: ', Xtrain.shape, '\\n\\n',\n",
+    "    #      'y_train: ', y_train.shape, '\\nytrain: ', ytrain.shape)\n",
+    "    #print()\n",
+    "    #print('X_test: ', X_test.shape, '\\nXtest: ', Xtest.shape, '\\n\\n',\n",
+    "    #      'y_test: ', y_test.shape, '\\nytest: ', ytest.shape)\n",
+    "    #print()\n",
+    "    #print('Prediction: ', len(prediction))\n",
+    "    \n",
+    "        plt.style.use(\"cyberpunk\") #Background color\n",
+    "        pal_red = sns.color_palette(\"flare\") #Color\n",
+    "        pal_blue = sns.color_palette(\"Blues\") #Color\n",
+    "    \n",
+    "#------------------------------------------------------------------------------------------------------------------------------#\n",
+    "        #------------ Plot 1 ------------#\n",
+    "        fig, ax1 = plt.subplots(figsize=(15,5), tight_layout=True) #Size of plot dpi=300 for better quality\n",
+    "\n",
+    "        ax1.plot(index, y_train, ls='--', linewidth=1.5, label='Actual Price', color=pal_red[0])\n",
+    "        ax1.plot(index, model_train_predict, linewidth=1, label='Model Train', color=pal_blue[1])\n",
+    "\n",
+    "        ax1.plot(forecast_index, y_test, ls='--', color=pal_red[0])\n",
+    "        #ax1.plot(forecast_index, prediction, label='asdasdfdg', color=pal_blue[4])\n",
+    "        \n",
+    "        #plt.legend() #Label - Size of plot\n",
+    "        plt.legend(['Actual Price','Model Train'], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "        plt.ylabel('Model Train', fontsize=20, color='Gold') #Bottom title\n",
+    "        plt.tick_params(axis='x', labelrotation=30, labelsize=15, width=10, length=3,  direction=\"in\", colors='White') #Rotation label x and y\n",
+    "        plt.tick_params(axis='y', labelrotation=30, labelsize=15, colors='White') #Rotation label x and y\n",
+    "        plt.grid(zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "\n",
+    "        mplcp.make_lines_glow()\n",
+    "\n",
+    "        ax1.spines['top'].set_visible(False)\n",
+    "        ax1.spines['right'].set_visible(False)\n",
+    "        ax1.spines['left'].set_color('White')\n",
+    "        ax1.spines['left'].set_linewidth(0.3)\n",
+    "        ax1.spines['bottom'].set_color('White')\n",
+    "        ax1.spines['bottom'].set_linewidth(0.3)\n",
+    "        plt.show()\n",
+    "        #------------ Plot 1 ------------#\n",
+    "#------------------------------------------------------------------------------------------------------------------------------#\n",
+    "  \n",
+    "#------------------------------------------------------------------------------------------------------------------------------#\n",
+    "        #------------ Plot 2 ------------#\n",
+    "        fig, ax2 = plt.subplots(figsize=(15,5), tight_layout=True) #Size of plot dpi=300 for better quality\n",
+    "\n",
+    "        ax2.plot(forecast_index, y_test, ls='--', label='Actual', color=pal_red[3])\n",
+    "        ax2.plot(forecast_index, prediction, label='Forecast', color=pal_blue[4])\n",
+    "\n",
+    "        plt.ylabel('Forecast', fontsize=20, color='Gold') #Bottom title\n",
+    "        #plt.legend() #Label - Size of plot\n",
+    "        plt.legend(['Actual','Forecast'], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "        plt.tick_params(axis='x', labelrotation=30, labelsize=15, width=10, length=3,  direction=\"in\", colors='White') #Rotation label x and y\n",
+    "        plt.tick_params(axis='y', labelrotation=30, labelsize=15, colors='White') #Rotation label x and y\n",
+    "        plt.grid(zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "\n",
+    "        mplcp.make_lines_glow()\n",
+    "        \n",
+    "        ax2.spines['top'].set_visible(False)\n",
+    "        ax2.spines['right'].set_visible(False)\n",
+    "        ax2.spines['left'].set_color('White')\n",
+    "        ax2.spines['left'].set_linewidth(0.3)\n",
+    "        ax2.spines['bottom'].set_color('White')\n",
+    "        ax2.spines['bottom'].set_linewidth(0.3)\n",
+    "        plt.show()\n",
+    "        #------------ Plot 2 ------------#\n",
+    "#------------------------------------------------------------------------------------------------------------------------------#\n",
+    "\n",
+    "#------------------------------------------------------------------------------------------------------------------------------#\n",
+    "        #------------ Plot 2,3 ------------#\n",
+    "        metric_train = model.predict(X=Xtrain).tolist()\n",
+    "    \n",
+    "        Train_MSE = mean_squared_error(ytrain, metric_train)\n",
+    "        Train_RMSE = math.sqrt(Train_MSE)\n",
+    "        Train_RMSE = round(Train_RMSE,3)\n",
+    "        \n",
+    "        Test_MSE = mean_squared_error(y_test, prediction)\n",
+    "        Test_RMSE = math.sqrt(Test_MSE)\n",
+    "        Test_RMSE = round(Test_RMSE,3)\n",
+    "\n",
+    "        Metric_data = pd.DataFrame(data={'Train' : [Train_RMSE],\n",
+    "                                         'Test' : [Test_RMSE]})\n",
+    "        #Metric_data.astype(float)\n",
+    "    \n",
+    "        fig = gridspec.GridSpec(3, 2)\n",
+    "        pl.figure(figsize=(15, 15), tight_layout=True)\n",
+    "\n",
+    "        ax2 = pl.subplot(fig[0, 0])\n",
+    "        plt.ylabel('Root Mean Square Error', fontsize=20, color='Gold') #Bottom title\n",
+    "    \n",
+    "        bar1 = ax2.bar(Metric_data.columns[0], Metric_data['Train'], width=0.3, linewidth=3, alpha=0.8, bottom=0, edgecolor=pal_blue[3], color=pal_blue[4])\n",
+    "        bar2 = ax2.bar(Metric_data.columns[1], Metric_data['Test'], width=0.3, linewidth=3, alpha=0.8, bottom=0, edgecolor=pal_red[2], color=pal_red[3])\n",
+    "    \n",
+    "        ax2.tick_params(axis='x', width=7, length=12, labelrotation=30, labelsize=15, bottom=True, direction=\"in\", colors='White') #White\n",
+    "        ax2.tick_params(axis='y', labelsize=0) #White\n",
+    "        #ax2.tick_params(axis='y', labelsize=0) #Rotation label x and y\n",
+    "        #ax2.tick_params(axis='y', labelrotation=30, labelsize=15, left=False, colors='White') #White\n",
+    "        ax2.tick_params(axis='x', width=7, length=12, labelrotation=30, labelsize=15, bottom=True, direction=\"in\", left=False, colors='White') #White\n",
+    "        ax2.grid(axis='y', zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "\n",
+    "        ax2.text(x=Metric_data.Train.name, y=Metric_data.Train.sum()/2, s=Metric_data.Train[0], color='White', weight='extra bold', ha='center', fontsize=15) #Text of labels\n",
+    "        ax2.text(x=Metric_data.Test.name, y=Metric_data.Test.sum()/2, s=Metric_data.Test[0], color='White', weight='extra bold', ha='center', fontsize=15) #Text of labels\n",
+    "\n",
+    "        mplcp.add_bar_gradient(bars=bar1)\n",
+    "        mplcp.add_bar_gradient(bars=bar2)\n",
+    "    \n",
+    "        ax2.spines['top'].set_visible(False)\n",
+    "        ax2.spines['right'].set_visible(False)\n",
+    "        ax2.spines['left'].set_visible(False)\n",
+    "        ax2.spines['bottom'].set_color('White')\n",
+    "        ax2.spines['bottom'].set_linewidth(0.3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "        ax3 = pl.subplot(fig[0, 1])\n",
+    "        \n",
+    "        ax3.barh(Metric_data.columns[0], Metric_data['Train']+0.1, height=0.4, linewidth=3, alpha=0.3, left=0, color=pal_blue[4])\n",
+    "        ax3.barh(Metric_data.columns[1], Metric_data['Test']+0.1, height=0.4, linewidth=3, alpha=0.3, left=0, color=pal_red[3])\n",
+    "    \n",
+    "        ax3.barh(Metric_data.columns[0], Metric_data['Train'], height=0.3, linewidth=3, alpha=0.8, left=0, edgecolor=pal_blue[3], color=pal_blue[4])\n",
+    "        ax3.barh(Metric_data.columns[1], Metric_data['Test'], height=0.3, linewidth=3, alpha=0.8, left=0, edgecolor=pal_red[2], color=pal_red[3])\n",
+    "    \n",
+    "        ax3.legend(['RMSE - Train','RMSE - Test'], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "        ax3.tick_params(axis='y', width=7, length=12, labelrotation=30, labelsize=15, left=True, bottom=False, direction=\"in\", colors='White')\n",
+    "        ax3.tick_params(axis='x', labelsize=0) #Rotation label x and y\n",
+    "        ax3.grid(axis='x', zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "        #ax3.tick_params(axis='x', labelrotation=30, labelsize=15, bottom=False, colors='White')\n",
+    "\n",
+    "        ax3.text(x=Metric_data.Train.sum()/2, y=Metric_data.Train.name, s=Metric_data.Train[0], color='White', weight='extra bold', va='center', fontsize=15) #Text of labels\n",
+    "        ax3.text(x=Metric_data.Test.sum()/2, y=Metric_data.Test.name, s=Metric_data.Test[0], color='White', weight='extra bold', va='center', fontsize=15) #Text of labels\n",
+    "    \n",
+    "        ax3.spines['top'].set_visible(False)\n",
+    "        ax3.spines['right'].set_visible(False)\n",
+    "        ax3.spines['bottom'].set_visible(False)\n",
+    "        ax3.spines['left'].set_color('White')\n",
+    "        ax3.spines['left'].set_linewidth(0.3)\n",
+    "        plt.show()\n",
+    "        #------------ Plot 2,3 ------------#\n",
+    "#------------------------------------------------------------------------------------------------------------------------------#\n",
+    "\n",
+    "#------------------------------------------------------------------------------------------------------------------------------#\n",
+    "    \n",
+    "        length_of_dataframe = int(len(dataframe) * 0.79)\n",
+    "\n",
+    "        #------------ Plot 4 ------------#\n",
+    "        Residuals_Train = ytrain - metric_train\n",
+    "        Residuals_Test = y_test - prediction\n",
+    "    \n",
+    "        Residuals_data_train = pd.DataFrame(data={'Residuals_Train' : Residuals_Train})\n",
+    "        Residuals_data_test = pd.DataFrame(data={'Residuals_Test' : Residuals_Test})\n",
+    "\n",
+    "        residuals_index_train = Residuals_data_train.index.copy()\n",
+    "        residuals_index_train = pd.to_datetime(residuals_index_train) #Residuals intex train\n",
+    "    \n",
+    "        fig, ax4 = plt.subplots(figsize=(15,5), tight_layout=True) #Size of plot dpi=300 for better quality\n",
+    "\n",
+    "        ax4.plot(residuals_index_train[0:length_of_dataframe], Residuals_data_train.Residuals_Train[0:length_of_dataframe], color=pal_blue[4])\n",
+    "        ax4.plot(forecast_index, Residuals_data_test.Residuals_Test.values, color=pal_red[3])\n",
+    "        \n",
+    "        ax4.legend(['Residuals - Train','Residuals - Test'], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "        ax4.tick_params(axis='x', labelrotation=30, labelsize=15, width=10, length=3, direction=\"in\", colors='White') #Rotation label x and y\n",
+    "        #ax4.tick_params(axis='y', labelsize=0) #White\n",
+    "        ax4.tick_params(axis='y', labelrotation=30, labelsize=15, colors='White') #Rotation label x and y\n",
+    "        ax4.grid(zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "    \n",
+    "        mplcp.make_lines_glow()\n",
+    "\n",
+    "        ax4.spines['top'].set_visible(False)\n",
+    "        ax4.spines['right'].set_visible(False)\n",
+    "        ax4.spines['left'].set_color('White')\n",
+    "        ax4.spines['left'].set_linewidth(0.3)\n",
+    "        ax4.spines['bottom'].set_color('White')\n",
+    "        ax4.spines['bottom'].set_linewidth(0.3)\n",
+    "        plt.show()\n",
+    "        #------------ Plot 4 ------------#\n",
+    "#------------------------------------------------------------------------------------------------------------------------------#\n",
+    "\n",
+    "    except:\n",
+    "        print('No option!\\nError')\n",
     "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n"
    ]
   },
