--- a/Functions/Visualization/Plots.ipynb
+++ b/Functions/Visualization/Plots.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "41947e15",
    "metadata": {},
    "outputs": [],
@@ -108,6 +108,7 @@
     "    ------------------------------\n",
     "    '''\n",
     "    \n",
+    "    pal_dark = sns.color_palette(\"Greys\")\n",
     "    data = dataframe.copy()\n",
     "    data.index = pd.to_datetime(data.index)\n",
     "    \n",
@@ -115,8 +116,8 @@
     "    \n",
     "    fig = plt.figure(figsize=(15,5), tight_layout=True) #Size of plot dpi=300 for better quality\n",
     "    \n",
-    "    outline=mpe.withStroke(linewidth=0.1, alpha=0.25, foreground='Gold')\n",
-    "    plt.plot(data.index, data[column_name].values,  path_effects=[outline], alpha=0.8, color='Cyan') #Line of plot\n",
+    "    outline=mpe.withStroke(linewidth=0.3, alpha=0.7, foreground='Gold')\n",
+    "    plt.plot(data.index, data[column_name].values,  path_effects=[outline], alpha=1, color=pal_dark[3]) #Line of plot\n",
     "    \n",
     "    plt.legend([column_name], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
     "    \n",
@@ -136,7 +137,7 @@
     "    mplcp.add_gradient_fill(alpha_gradientglow=0.7) #Glow - Effect lines\n",
     "    mplcp.make_lines_glow(alpha_line=0.5, n_glow_lines=10,  diff_linewidth=1.05) #Glow - Effect lines\n",
     "    \n",
-    "    plt.show() #Figure show    \n",
+    "    plt.show() #Figure show   def Plot_Of_Line(dataframe, column_name):\n",
     "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
     "\n",
     "\n",
@@ -249,8 +250,9 @@
     "        ax1.spines['right'].set_visible(False)   \n",
     "  \n",
     "        for _ in range(i + 1):\n",
+    "            #ax2.plot(y.index[0:table_data.length_y_train[_]], y.values[0:table_data.length_y_train[_]], linewidth=1.5, color=pal_blue[4])\n",
     "            ax2.plot(y.index[0:table_data.length_y_train[_]], y.values[0:table_data.length_y_train[_]], linewidth=1.5, color=pal_blue[len(table_data)-2])\n",
-    "            ax2.plot(y.index[table_data.length_y_train[_]:table_data.length_y_train[_] + table_data.length_y_test[_]], y.values[table_data.length_y_train[_]:table_data.length_y_train[_] + table_data.length_y_test[_]], linewidth=1.2, color=pal_red[len(table_data)-3])\n",
+    "            #ax2.plot(y.index[table_data.length_y_train[_]:table_data.length_y_train[_] + table_data.length_y_test[_]], y.values[table_data.length_y_train[_]:table_data.length_y_train[_] + table_data.length_y_test[_]], linewidth=1.2, color=pal_red[len(table_data)-3])\n",
     "            #ax2.plot(y.index[table_data.length_y_train[_]:table_data.length_y_train[_] + table_data.length_y_test[_]], y.values[table_data.length_y_train[_]:table_data.length_y_train[_] + table_data.length_y_test[_]], linewidth=1.2, alpha=0, color=pal_red[len(table_data)-3])\n",
     "\n",
     "        ax2.tick_params(axis='x', colors='White', direction=\"in\", width=7, length=12, labelrotation=30, labelsize=15)\n",
@@ -409,11 +411,15 @@
     "                div_train_data, div_test_data = div_numbers_of_data(length_table_data=len(table_data), table_data_column1=table_data.length_y_train, table_data_column2=table_data.length_y_test, index_of_table=_)\n",
     "            \n",
     "                if c == 0:\n",
-    "                    ax2.plot(y.index[0:div_train_data[c+1]], y.values[0:div_train_data[c+1]], linewidth=1.3, color=pal_blue[c])\n",
-    "                    ax2.plot(y.index[div_train_data[-1]:div_train_data[-1] + div_test_data[c]], y.values[div_train_data[-1]:div_train_data[-1] + div_test_data[c]], linewidth=1.3, color=pal_red[c])\n",
+    "                    ax2.plot(y.index[0:div_train_data[c+1]], y.values[0:div_train_data[c+1]], linewidth=1.3, color=pal_blue[4])\n",
+    "                    ax2.plot(y.index[div_train_data[-1]:div_train_data[-1] + div_test_data[c]], y.values[div_train_data[-1]:div_train_data[-1] + div_test_data[c]], linewidth=0.3, color=pal_red[3])\n",
+    "                    #ax2.plot(y.index[0:div_train_data[c+1]], y.values[0:div_train_data[c+1]], linewidth=1.3, color=pal_blue[c])\n",
+    "                    #ax2.plot(y.index[div_train_data[-1]:div_train_data[-1] + div_test_data[c]], y.values[div_train_data[-1]:div_train_data[-1] + div_test_data[c]], linewidth=1.3, color=pal_red[c])\n",
     "                elif c < len(table_data)-1:\n",
-    "                    ax2.plot(y.index[div_train_data[c]:div_train_data[c+1]], y.values[div_train_data[c]:div_train_data[c+1]], linewidth=1.3, color=pal_blue[c])\n",
-    "                    ax2.plot(y.index[div_train_data[len(table_data)-1] + div_test_data[c]:div_train_data[len(table_data)-1] + div_test_data[c+1]], y.values[div_train_data[-1] + div_test_data[c]:div_train_data[-1] + div_test_data[c+1]], linewidth=1.3, color=pal_red[c])\n",
+    "                    ax2.plot(y.index[div_train_data[c]:div_train_data[c+1]], y.values[div_train_data[c]:div_train_data[c+1]], linewidth=1.3, color=pal_blue[4])\n",
+    "                    ax2.plot(y.index[div_train_data[len(table_data)-1] + div_test_data[c]:div_train_data[len(table_data)-1] + div_test_data[c+1]], y.values[div_train_data[-1] + div_test_data[c]:div_train_data[-1] + div_test_data[c+1]], linewidth=0.3, color=pal_red[3])\n",
+    "                    #ax2.plot(y.index[div_train_data[c]:div_train_data[c+1]], y.values[div_train_data[c]:div_train_data[c+1]], linewidth=1.3, color=pal_blue[c])\n",
+    "                    #ax2.plot(y.index[div_train_data[len(table_data)-1] + div_test_data[c]:div_train_data[len(table_data)-1] + div_test_data[c+1]], y.values[div_train_data[-1] + div_test_data[c]:div_train_data[-1] + div_test_data[c+1]], linewidth=1.3, color=pal_red[c])\n",
     "            \n",
     "        ax2.tick_params(axis='x', colors='White', direction=\"in\", width=7, length=12, labelrotation=30, labelsize=15)\n",
     "        ax2.tick_params(axis='y', width=0, length=0, labelsize=0)\n",
@@ -424,7 +430,7 @@
     "        ax2.spines['right'].set_visible(False)\n",
     "        ax2.spines['left'].set_visible(False)\n",
     "    \n",
-    "    ani = FuncAnimation(fig=fig, func=animation_bar_line, frames=range(len(table_data)), interval=1000, repeat_delay=1500)\n",
+    "    ani = FuncAnimation(fig=fig, func=animation_bar_line, frames=range(len(table_data)), interval=1500, repeat_delay=2500)\n",
     "    ani.save(filename=\"../Forecast_Prices/Animation/plot_bars_lines.gif\", writer=\"pillow\")\n",
     "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
     "\n",
@@ -619,7 +625,8 @@
     "        ax4.legend(['Residuals - Train','Residuals - Test'], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
     "\n",
     "        ax4.tick_params(axis='x', labelrotation=30, labelsize=15, width=10, length=3, direction=\"in\", colors='White') #Rotation label x and y\n",
-    "        ax4.tick_params(axis='y', labelsize=0) #White\n",
+    "        #ax4.tick_params(axis='y', labelsize=0) #White\n",
+    "        ax4.tick_params(axis='y', labelrotation=30, labelsize=15, colors='White') #Rotation label x and y\n",
     "        #ax4.tick_params(axis='y', labelrotation=30, labelsize=15, colors='White') #Rotation label x and y\n",
     "        ax4.grid(zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
     "    \n",
