--- a/Functions/Preparation_Data/Preprocessing.ipynb
+++ b/Functions/Preparation_Data/Preprocessing.ipynb
@@ -268,6 +268,27 @@
     "            continue;\n",
     "    print('--- End Keep_Specific_Columns()')\n",
     "    return new_dataframe\n",
+    "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
+    "\n",
+    "\n",
+    "\n",
+    "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
+    "def Train_Test_Sply(dataframe):\n",
+    "    '''\n",
+    "    This Function Return 4 Values with split of dataframe \n",
+    "    Train is 80% length of dataframe\n",
+    "    Test is 20% length of dataframe\n",
+    "    Target must be the first column\n",
+    "    ------------------------------\n",
+    "    Parameter(dataframe): DataFrame\n",
+    "    ------------------------------\n",
+    "    '''\n",
+    "    \n",
+    "    X = dataframe.iloc[:, 1:]\n",
+    "    y = dataframe.iloc[:, 0]\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False)  # 80% X_train - 20% X_test\n",
+    "    \n",
+    "    return X_train, X_test, y_train, y_test\n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n"
    ]
   },
