--- a/Functions/Visualization/Plots.ipynb
+++ b/Functions/Visualization/Plots.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "41947e15",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,6 @@
     "    plt.plot(data.index, data[column_name].values,  path_effects=[outline], alpha=1, color=pal_dark[3]) #Line of plot\n",
     "    \n",
     "    plt.legend([column_name], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
-    "    \n",
     "    plt.xlabel('Period', fontsize=20, color='Gold') #Left title\n",
     "    plt.ylabel('Price ($)', fontsize=20, color='Gold') #Bottom title\n",
     "    \n",
@@ -484,15 +483,15 @@
     "                forecast = model.predict(Xtest).tolist() #Predict the days\n",
     "                prediction = prediction + forecast #Insert the forecast values in prediction\n",
     "                break;\n",
-    "    #------------ Drop the Xtest rows and Fit again the Xtrain ------------#\n",
+    "        #------------ Drop the Xtest rows and Fit again the Xtrain ------------#\n",
     "    \n",
-    "    #print('X_train: ', X_train.shape, '\\nXtrain: ', Xtrain.shape, '\\n\\n',\n",
-    "    #      'y_train: ', y_train.shape, '\\nytrain: ', ytrain.shape)\n",
-    "    #print()\n",
-    "    #print('X_test: ', X_test.shape, '\\nXtest: ', Xtest.shape, '\\n\\n',\n",
-    "    #      'y_test: ', y_test.shape, '\\nytest: ', ytest.shape)\n",
-    "    #print()\n",
-    "    #print('Prediction: ', len(prediction))\n",
+    "        #print('X_train: ', X_train.shape, '\\nXtrain: ', Xtrain.shape, '\\n\\n',\n",
+    "        #      'y_train: ', y_train.shape, '\\nytrain: ', ytrain.shape)\n",
+    "        #print()\n",
+    "        #print('X_test: ', X_test.shape, '\\nXtest: ', Xtest.shape, '\\n\\n',\n",
+    "        #      'y_test: ', y_test.shape, '\\nytest: ', ytest.shape)\n",
+    "        #print()\n",
+    "        #print('Prediction: ', len(prediction))\n",
     "    \n",
     "        plt.style.use(\"cyberpunk\") #Background color\n",
     "        pal_red = sns.color_palette(\"flare\") #Color\n",
@@ -554,7 +553,7 @@
     "        bar1 = ax2.bar(Metric_data.columns[0], Metric_data['Train'], width=0.3, linewidth=3, alpha=0.8, bottom=0, edgecolor=pal_blue[3], color=pal_blue[4])\n",
     "        bar2 = ax2.bar(Metric_data.columns[1], Metric_data['Test'], width=0.3, linewidth=3, alpha=0.8, bottom=0, edgecolor=pal_red[2], color=pal_red[3])\n",
     "    \n",
-    "        ax2.tick_params(axis='x', width=7, length=12, labelrotation=30, labelsize=15, bottom=True, direction=\"in\", colors='White') #White\n",
+    "        #ax2.tick_params(axis='x', width=7, length=12, labelrotation=30, labelsize=15, bottom=True, direction=\"in\", colors='White') #White\n",
     "        ax2.tick_params(axis='y', labelsize=0) #White\n",
     "        #ax2.tick_params(axis='y', labelsize=0) #Rotation label x and y\n",
     "        #ax2.tick_params(axis='y', labelrotation=30, labelsize=15, left=False, colors='White') #White\n",
@@ -1001,6 +1000,67 @@
     "\n",
     "    except:\n",
     "        print('No option!\\nError')\n",
+    "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
+    "\n",
+    "\n",
+    "\n",
+    "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
+    "def Characteristics_of_LinearRegression(model):\n",
+    "    '''\n",
+    "    This function visualize a importance model columns and average of this.\n",
+    "    ------------------------------\n",
+    "    Parameter(model): ML - Model\n",
+    "    ------------------------------\n",
+    "    '''\n",
+    "\n",
+    "    #--------------------------------------------------#\n",
+    "    poss_coef = model.coef_[model.coef_ > 0]    \n",
+    "    neg_coef = model.coef_[model.coef_ < 0]   \n",
+    "    \n",
+    "    poss_avg = np.average(poss_coef)\n",
+    "    neg_avg = np.average(neg_coef)\n",
+    "    #--------------------------------------------------#\n",
+    "    \n",
+    "    plt.style.use(\"cyberpunk\") #Background color\n",
+    "    pal_red = sns.color_palette(\"flare\") #Color\n",
+    "    pal_blue = sns.color_palette(\"Blues\") #Color\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(18,8), tight_layout=True) #Size of plot dpi=300 for better quality\n",
+    "    \n",
+    "    for _ in range(len(model.coef_)):\n",
+    "        if (model.coef_[_] >= poss_avg) or (model.coef_[_] <= neg_avg):\n",
+    "            if model.coef_[_] > 0:\n",
+    "                bar1 = ax.bar(model.feature_names_in_[_], model.coef_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, edgecolor=pal_blue[3], color=pal_blue[4])\n",
+    "            elif model.coef_[_] < 0:\n",
+    "                bar1 = ax.bar(model.feature_names_in_[_], model.coef_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, edgecolor=pal_red[2], color=pal_red[3])\n",
+    "            else:\n",
+    "                bar1 = ax.bar(model.feature_names_in_[_], model.coef_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, color='White')\n",
+    "        else:\n",
+    "            bar1 = ax.bar(model.feature_names_in_[_], model.coef_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, edgecolor='Silver', color='Snow')\n",
+    "\n",
+    "    ax.hlines(y = poss_avg, xmin = len(model.coef_) * 0.12, xmax = model.feature_names_in_[-4], linestyles = 'dashed', color = 'White')\n",
+    "    ax.text(model.feature_names_in_[0], poss_avg, 'Avg Importance Columns', ha ='left', va ='center') \n",
+    "    ax.text(model.feature_names_in_[-1], poss_avg, round(poss_avg,2), ha ='right', va ='center') \n",
+    "\n",
+    "    ax.hlines(y = neg_avg, xmin = model.feature_names_in_[3], xmax = len(model.coef_) * 0.88, linestyles = 'dashed', color = 'White')\n",
+    "    ax.text(model.feature_names_in_[-1], neg_avg, 'Avg Importance Columns', ha ='right', va ='center') \n",
+    "    ax.text(model.feature_names_in_[0], neg_avg, round(neg_avg,2), ha ='left', va ='center') \n",
+    "\n",
+    "    plt.legend([model], loc=\"upper right\", fontsize=15, labelcolor='Gold')\n",
+    "    plt.xlabel('Columns Name', fontsize=20, color='Gold') #Left title\n",
+    "    plt.ylabel('Importance Model Values', fontsize=20, color='Gold') #Bottom title\n",
+    "    plt.tick_params(axis='y', labelrotation=30, labelsize=12, colors='White')\n",
+    "    plt.tick_params(axis='x', width=3, length=7, labelrotation=30, labelsize=7, bottom=True, direction=\"in\", left=False, colors='White') #White\n",
+    "    \n",
+    "    ax.spines['top'].set_visible(True)\n",
+    "    ax.spines['top'].set_linewidth(0.7)\n",
+    "    ax.spines['top'].set_color('Gold')\n",
+    "    ax.spines['right'].set_visible(True)\n",
+    "    ax.spines['right'].set_linewidth(0.7)\n",
+    "    ax.spines['right'].set_color('Gold')\n",
+    "    ax.spines['left'].set_visible(False)\n",
+    "    ax.spines['bottom'].set_visible(False)     \n",
+    "    plt.show()\n",
     "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n"
    ]
   },
